--- a/app/globals.css
+++ b/app/globals.css
@@ -1,43 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&family=Orbitron:wght@400;500;600;700;800;900&display=swap');
 
-/* TWK Everett Font Face Declarations */
+/* Power Grotesk Font Face Declarations */
 @font-face {
-  font-family: 'TWK Everett';
-  src: url('/fonts/TWKEverett-Thin.otf') format('opentype');
+  font-family: 'Power Grotesk';
+  src: url('/fonts/PowerGrotesk-Thin.otf') format('opentype');
   font-weight: 100;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'TWK Everett';
-  src: url('/fonts/TWKEverett-Regular.otf') format('opentype');
+  font-family: 'Power Grotesk';
+  src: url('/fonts/PowerGrotesk-Regular.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'TWK Everett';
-  src: url('/fonts/TWKEverett-Bold.otf') format('opentype');
+  font-family: 'Power Grotesk';
+  src: url('/fonts/PowerGrotesk-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Power Grotesk';
+  src: url('/fonts/PowerGrotesk-Bold.otf') format('opentype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'TWK Everett';
-  src: url('/fonts/TWKEverett-Black.otf') format('opentype');
+  font-family: 'Power Grotesk';
+  src: url('/fonts/PowerGrotesk-Black.otf') format('opentype');
   font-weight: 900;
   font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'TWK Everett';
-  src: url('/fonts/TWKEverett-BlackItalic.otf') format('opentype');
-  font-weight: 900;
-  font-style: italic;
   font-display: swap;
 }
 
@@ -136,7 +136,7 @@
   }
   body {
     @apply bg-black text-white min-h-screen;
-    font-family: 'TWK Everett', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    font-family: 'Power Grotesk', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
       "Helvetica Neue", Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -145,7 +145,7 @@
       radial-gradient(at 75% 75%, #111111 0%, transparent 50%);
   }
   html {
-    font-family: 'TWK Everett', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    font-family: 'Power Grotesk', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
       "Helvetica Neue", Arial, sans-serif;
   }
   
